// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesList with empty message 1`] = `
<div
  className="list"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-item list-item--message"
  >
    <p>
      No expenses
    </p>
  </div>
</div>
`;

exports[`should render ExpensesList with expenses 1`] = `
<div
  className="list"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <ExpenseListItem
    amount={200}
    createdAt={0}
    description="Bananas"
    id="1"
    key="1"
    note="Blah blah"
  />
  <ExpenseListItem
    amount={7200}
    createdAt={-345600000}
    description="Rent"
    id="2"
    key="2"
    note="Blah blah"
  />
  <ExpenseListItem
    amount={25600}
    createdAt={345600000}
    description="Credit Card"
    id="3"
    key="3"
    note="Blah blah"
  />
</div>
`;
